<resources>
    <string name="app_name">Not Forgot!</string>
    <!-- Login Fragment -->
    <string name="login_title">Вход</string>
    <string name="login_button_auth_text">Войти</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_button_reg_text">Регистрация</string>
    <string name="login_text_input_error">Поле не может быть пустым</string>
    <!-- Registration Fragment -->
    <string name="registration_title">Регистрация</string>
    <string name="registration_name_hint">Имя</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Пароль</string>
    <string name="registration_retry_password_hint">Повторите пароль</string>
    <string name="registration_button_reg_text">Регистрация</string>
    <string name="registration_text_input_error">Поле не может быть пустым</string>
    <string name="registration_password_error">Пароли не совпадают</string>
    <!-- Main Fragment -->
    <string name="main_btn_add_description">Добавить новую заметку</string>
    <string name="main_empty_list_text">У вас пока нет дел.\nСчастливый вы человек!</string>
    <!-- Editor Fragment -->
    <string name="editor_name_hint">Название</string>
    <string name="editor_description_hint">Описание</string>
    <string name="editor_category_description">Категория</string>
    <string name="editor_priority_description">Приоритет</string>
    <string name="editor_add_category_description">Добавить категорию</string>
    <string name="editor_completion_date_description">Дата выполнения</string>
    <string name="editor_completion_date_hint">Сделать до</string>
    <string name="editor_button_save_text">Сохранить</string>
    <string name="editor_name_error">Поле обязательно для заполения</string>
    <string name="editor_description_error">Поле обязательно для заполения</string>
    <string name="editor_date_error">Выберите дату</string>
    <string name="editor_priority_error">Выберите приоритет</string>
    <string name="editor_loading_text">Сохранение</string>
    <!-- Add Category Dialog Fragment -->
    <string name="add_category_title">Добавить категорию</string>
    <string name="add_category_name_hint">Название категории</string>
    <string name="add_category_button_ok">Ок</string>
    <string name="add_category_button_cancel">Отмена</string>
    <string name="add_category_error">Данная категория уже существует</string>
    <!--Note Details Fragment-->
    <string name="details_completed">Выполнено</string>
    <string name="details_not_completed">Не выполнено</string>
    <string name="details_button_edit">Редактировать</string>
    <!-- Loading Dialog Messages -->
    <string name="message_auth">Авторизация…</string>
    <string name="message_sync">Синхронизация данных…</string>
    <string name="message_register">Регистрация…</string>
    <!-- Notifications -->
    <string name="notification_sync">Синхронизация данных…</string>
    <!-- Toast Messages -->
    <string name="auth_invalid">Неверный логин или пароль</string>
    <string name="auth_error">Произошла ошибка авторизации. Повторите попытку позже.</string>
    <string name="register_invalid">Пользователь с данным логином уже существует</string>
    <string name="register_error">Ошибка регистрации</string>
    <!--Other-->
    <string name="null_category_name">Без категории</string>
    <string name="priority_empty">Без приоритета</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_middle">Средний</string>
    <string name="priority_important">Высокий</string>
    <string name="priority_very_important">Очень высокий</string>
    <string name="date_format">%04d-%02d-%02d</string>



</resources>